--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<p>基于容器的免费建站平台</p>
 					<ul class="actions special">
 						<li><a href="join.html"  class="button primary">立即申请</a></li>
-						<li><a href="#" class="button">节点列表</a></li>
+						<li><a href="https://potato.pub" class="button">交流论坛</a></li>
 					</ul>
 				</section>
 <br><br><br><br><br><br><br>
